Updated shared styling

--- a/adminconsole/Views/Locations/Index.cshtml
+++ b/adminconsole/Views/Locations/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<adminconsole.Models.LocationsModel>
+﻿@model IEnumerable<adminconsole.Models.Locations>
 
 @{
     ViewData["Title"] = "Index";
