--- a/adminconsole/Views/Locations/Details.cshtml
+++ b/adminconsole/Views/Locations/Details.cshtml
@@ -122,10 +122,10 @@
             @Html.DisplayFor(s => s.LimitedTransactions)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.MilitaryIdrequired)
+            @Html.DisplayNameFor(model => model.MilitaryIdRequired)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(s => s.MilitaryIdrequired)
+            @Html.DisplayFor(s => s.MilitaryIdRequired)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.OnMilitaryBase)
