--- a/adminconsole/Views/Locations/Index.cshtml
+++ b/adminconsole/Views/Locations/Index.cshtml
@@ -72,7 +72,7 @@
                 @Html.DisplayNameFor(model => model.LimitedTransactions)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.MilitaryIdrequired)
+                @Html.DisplayNameFor(model => model.MilitaryIdRequired)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.OnMilitaryBase)
@@ -153,7 +153,7 @@
                 @Html.DisplayFor(modelItem => item.SpecialQualities.LimitedTransactions)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.SpecialQualities.MilitaryIdrequired)
+                @Html.DisplayFor(modelItem => item.SpecialQualities.MilitaryIdRequired)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.SpecialQualities.OnMilitaryBase)
