--- a/adminconsole/Views/Locations/Details.cshtml
+++ b/adminconsole/Views/Locations/Details.cshtml
@@ -1,10 +1,7 @@
-﻿@model adminconsole.Models.LocationsContactSpecialQualitiesViewModel
+﻿@model adminconsole.Models.Locations
 
 @{
     ViewData["Title"] = "Details";
-    var location = Model.locations.First();
-    var contact = Model.contacts.First();
-    var specialQualities = Model.specialQualities.First();
 }
 
 <h1>Details</h1>
@@ -17,149 +14,149 @@
             @Html.DisplayNameFor(model => model.InstitutionName)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(l => location.InstitutionName)
+            @Html.DisplayFor(model => model.InstitutionName)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TypeName)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(l => location.TypeName)
+            @Html.DisplayFor(model => model.TypeName)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Street)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(l => location.Street)
+            @Html.DisplayFor(model => model.Street)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.City)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(l => location.City)
+            @Html.DisplayFor(model => model.City)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.State)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(l => location.State)
+            @Html.DisplayFor(model => model.State)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Zipcode)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(l => location.Zipcode)
+            @Html.DisplayFor(model => model.Zipcode)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Lat)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(l => location.Lat)
+            @Html.DisplayFor(model => model.Lat)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Long)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(l => location.Long)
+            @Html.DisplayFor(model => model.Long)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.RetailOutlet)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(l => location.RetailOutlet)
+            @Html.DisplayFor(model => model.RetailOutlet)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Hours)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(l => location.Hours)
+            @Html.DisplayFor(model => model.Hours)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Phone)
+            @Html.DisplayNameFor(model => model.Contact.Phone)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(c => contact.Phone)
+            @Html.DisplayFor(model => model.Contact.Phone)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Fax)
+            @Html.DisplayNameFor(model => model.Contact.Fax)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(c => c.Fax)
+            @Html.DisplayFor(model => model.Contact.Fax)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Terminal)
+            @Html.DisplayNameFor(model => model.Contact.Terminal)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(c => c.Terminal)
+            @Html.DisplayFor(model => model.Contact.Terminal)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.AcceptsCash)
+            @Html.DisplayNameFor(model => model.SpecialQualities.AcceptsCash)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(s => s.AcceptsCash)
+            @Html.DisplayFor(model => model.SpecialQualities.AcceptsCash)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Cashless)
+            @Html.DisplayNameFor(model => model.SpecialQualities.Cashless)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(s => s.Cashless)
+            @Html.DisplayFor(model => model.SpecialQualities.Cashless)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DepositTaking)
+            @Html.DisplayNameFor(model => model.SpecialQualities.DepositTaking)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(s => s.DepositTaking)
+            @Html.DisplayFor(model => model.SpecialQualities.DepositTaking)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.HandicapAccess)
+            @Html.DisplayNameFor(model => model.SpecialQualities.HandicapAccess)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(s => s.HandicapAccess)
+            @Html.DisplayFor(model => model.SpecialQualities.HandicapAccess)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.LimitedTransactions)
+            @Html.DisplayNameFor(model => model.SpecialQualities.LimitedTransactions)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(s => s.LimitedTransactions)
+            @Html.DisplayFor(model => model.SpecialQualities.LimitedTransactions)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.MilitaryIdRequired)
+            @Html.DisplayNameFor(model => model.SpecialQualities.MilitaryIdRequired)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(s => s.MilitaryIdRequired)
+            @Html.DisplayFor(model => model.SpecialQualities.MilitaryIdRequired)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.OnMilitaryBase)
+            @Html.DisplayNameFor(model => model.SpecialQualities.OnMilitaryBase)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(s => s.OnMilitaryBase)
+            @Html.DisplayFor(model => model.SpecialQualities.OnMilitaryBase)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.RestrictedAccess)
+            @Html.DisplayNameFor(model => model.SpecialQualities.RestrictedAccess)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(s => s.RestrictedAccess)
+            @Html.DisplayFor(model => model.SpecialQualities.RestrictedAccess)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SelfServiceOnly)
+            @Html.DisplayNameFor(model => model.SpecialQualities.SelfServiceOnly)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(s => s.SelfServiceOnly)
+            @Html.DisplayFor(model => model.SpecialQualities.SelfServiceOnly)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Surcharge)
+            @Html.DisplayNameFor(model => model.SpecialQualities.Surcharge)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(s => s.Surcharge)
+            @Html.DisplayFor(model => model.SpecialQualities.Surcharge)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.AdditionalDetail)
+            @Html.DisplayNameFor(model => model.SpecialQualities.AdditionalDetail)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(s => s.AdditionalDetail)
+            @Html.DisplayFor(model => model.SpecialQualities.AdditionalDetail)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@location.LocationId">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.LocationId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
